--- a/contactus.html
+++ b/contactus.html
@@ -3,10 +3,30 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>CONTACT US</title>
+<style type="text/css">
+body {
+	background-color: #FF0;
+}
+a:link {
+	color: #00F;
+}
+a:visited {
+	color: #00F;
+}
+a:hover {
+	color: #F00;
+}
+a:active {
+	color: #00F;
+}
+</style>
 </head>
 
 <body>
 <p>24 hour contact line: 0736276617</p>
-<p><a href="mailto:nadeem@smartcreations.co.cc">click to send us a email</a></p>
+<p><a href="mailto:mil.smart@telkomsa.net">click to send us a email</a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><a href="home.html">BACK</a></p>
 </body>
 </html>
