--- a/home.html
+++ b/home.html
@@ -28,14 +28,13 @@ a:active {
 	color: #FFF;
 }
 </style>
-<meta http-equiv="Refresh" content="3;URL=home.html" />
 </head>
 
 <body>
-<p><img src="splash.jpg" alt="" width="352" height="416" /></p>
+<p><img src="untitled.png" alt="" width="454" height="132" /></p>
+<p><a href="news.html"><img src="untitledn.png" alt="" width="224" height="46" hspace="115" /></a></p>
+<p><a href="contactus.html"><img src="untitledc.png" alt="" width="224" height="46" hspace="115" /></a></p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><img src="Untitled-3.gif" width="454" height="340" /></p>
 </body>
 </html>
