--- a/news.html
+++ b/news.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><meta http-equiv="refresh" content="50" />
+
+<style type="text/css">
+body {
+	background-color: #00C;
+}
+a:link {
+	color: #FF0;
+}
+a:visited {
+	color: #FF0;
+}
+a:hover {
+	color: #F00;
+}
+a:active {
+	color: #FF0;
+}
+</style>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>NEWS</title>
+<meta http-equiv="Refresh" content="60" />
 </head>
 
-<body><script src="http://feeds.feedburner.com/mackenzieparkspecialproject?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/mackenzieparkspecialproject"></a><br/>Powered by FeedBurner</p> </noscript>
+<body>
+<p>
+  <script src="http://feeds.feedburner.com/mpnews2?format=sigpro" type="text/javascript" ></script>
+  <noscript>
+  </noscript>
+</p>
+<noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/mpnews2"></a><br/>Powered by FeedBurner</p> </noscript>
+
+
+<p><a href="home.html">BACK </a></p>
+<p>please note this page refreshes every 50 seconds</p>
 </body>
 </html>
