--- a/home.html
+++ b/home.html
@@ -36,5 +36,18 @@ a:active {
 <p><a href="contactus.html"><img src="untitledc.png" alt="" width="224" height="46" hspace="115" /></a></p>
 <p>&nbsp;</p>
 <p><img src="Untitled-3.gif" width="454" height="340" /></p>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34683234-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
