--- a/contactus.html
+++ b/contactus.html
@@ -23,8 +23,8 @@ a:active {
 </head>
 
 <body>
-<p>24 hour contact line: 0736276617</p>
-<p><a href="mailto:mil.smart@telkomsa.net">click to send us a email</a></p>
+<p>24 hour security line: <a href="tel:0736276617">0736276617</a> </p>
+<p><a href="mailto:mil.smart@telkomsa.net">click to send us a e-mail</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><a href="home.html">BACK</a></p>
