--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 }
 body {
 	background-color: #FFFFFF;
+	color: #F00;
 }
 a:link {
 	color: #FFF;
@@ -28,14 +29,27 @@ a:active {
 	color: #FFF;
 }
 </style>
-<meta http-equiv="Refresh" content="3;URL=home.html" />
 </head>
 
 <body>
-<p><img src="splash.jpg" alt="" width="352" height="416" /></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p><img src="untitled.png" alt="" width="454" height="132" /></p>
+<p><a href="news.html"><img src="untitledn.png" alt="" width="224" height="46" hspace="115" /></a></p>
+<p><a href="contactus.html"><img src="untitledc.png" alt="" width="224" height="46" hspace="115" /></a></p>
+<p>*PLEASE BE PATIENT WHEN SEEING A BLACK SCREEN,</p>
+<p>IT TAKES SOME TIME FOR DATA TO LOAD*</p>
+<p><img src="Untitled-3.gif" width="454" height="340" /></p>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34683234-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
